Disabled the PHP templating engine as it is not used anymore

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,7 +4,7 @@ framework:
     secret:           betterPuttingThisInTheLocalConfigFile
     router:           { resource: "%kernel.root_dir%/config/routing.yml" }
     validation:       { enabled: true, enable_annotations: true }
-    templating:       { engines: ['twig', 'php'] }
+    templating:       { engines: ['twig'] }
     session:
         default_locale: en
         lifetime:       3600
