--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/config/routing.yml
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/config/routing.yml
@@ -1,54 +1,54 @@
 homepage:
     pattern:        /
-    defaults:       { _controller: symfony2bundles.controller.main:indexAction }
+    defaults:       { _controller: knp_symfony2bundles.controller.main:indexAction }
     requirements:   { _method: "GET" }
 
 search:
     pattern:        /search.{_format}
-    defaults:       { _controller: symfony2bundles.controller.repo:searchAction, _format: html }
+    defaults:       { _controller: knp_symfony2bundles.controller.repo:searchAction, _format: html }
     requirements:   { _method: "GET", _format: "(html|json|js)" }
 
 latest:
     pattern:        /latest.{_format}
-    defaults:       { _controller: symfony2bundles.controller.repo:listLatestAction, class: Bundle }
+    defaults:       { _controller: knp_symfony2bundles.controller.repo:listLatestAction, class: Bundle }
     requirements:   { _method: "GET", _format: "(atom)" }
 
 api:
     pattern:        /api
-    defaults:       { _controller: symfony2bundles.controller.main:apiAction }
+    defaults:       { _controller: knp_symfony2bundles.controller.main:apiAction }
     requirements:   { _method: "GET" }
 
 bundle_list:
     pattern:        /bundle/{sort}.{_format}
-    defaults:       { _controller: symfony2bundles.controller.repo:listAction, class: Bundle, sort: score, _format: html }
+    defaults:       { _controller: knp_symfony2bundles.controller.repo:listAction, class: Bundle, sort: score, _format: html }
     requirements:   { _method: "GET", sort: "(score|name|createdAt|lastCommitAt)", _format: "(html|json|js)" }
 
 project_list:
     pattern:        /project/{sort}.{_format}
-    defaults:       { _controller: symfony2bundles.controller.repo:listAction, class: Project, sort: score, _format: html }
+    defaults:       { _controller: knp_symfony2bundles.controller.repo:listAction, class: Project, sort: score, _format: html }
     requirements:   { _method: "GET", sort: "(score|name|createdAt|lastCommitAt)", _format: "(html|json|js)" }
 
 user_list:
     pattern:        /developer/{sort}.{_format}
-    defaults:       { _controller: symfony2bundles.controller.user:listAction, sort: name, _format: html }
+    defaults:       { _controller: knp_symfony2bundles.controller.user:listAction, sort: name, _format: html }
     requirements:   { _method: "GET", sort: "(name|score)", _format: "(html|json|js)" }
 
 user_bundle_list:
     pattern:        /{name}/bundles.{_format}
-    defaults:       { _controller: symfony2bundles.controller.user:bundlesAction }
+    defaults:       { _controller: knp_symfony2bundles.controller.user:bundlesAction }
     requirements:   { _method: "GET", _format: "(json|js)" }
 
 user_projects_list:
     pattern:        /{name}/projects.{_format}
-    defaults:       { _controller: symfony2bundles.controller.user:projectsAction }
+    defaults:       { _controller: knp_symfony2bundles.controller.user:projectsAction }
     requirements:   { _method: "GET", _format: "(json|js)" }
 
 repo_show:
     pattern:        /{username}/{name}.{_format}
-    defaults:       { _controller: symfony2bundles.controller.repo:showAction, _format: html }
+    defaults:       { _controller: knp_symfony2bundles.controller.repo:showAction, _format: html }
     requirements:   { _method: "GET", _format: "(html|json|js)", name: ".+" }
 
 user_show:
     pattern:        /{name}.{_format}
-    defaults:       { _controller: symfony2bundles.controller.user:showAction, _format: html }
+    defaults:       { _controller: knp_symfony2bundles.controller.user:showAction, _format: html }
     requirements:   { _method: "GET", _format: "(html|json|js)" }
