--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/config/routing.yml
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/config/routing.yml
@@ -1,32 +1,32 @@
 search:
     pattern:        /search
     defaults:       { _controller: knp_symfony2bundles.controller.repo:searchAction }
-    requirements:   { _method: "GET", format: "(html|json|js)" }
+    requirements:   { _method: "GET"}
 
 latest:
     pattern:        /latest
     defaults:       { _controller: knp_symfony2bundles.controller.repo:listLatestAction, class: Bundle }
-    requirements:   { _method: "GET", format: "(atom)" }
+    requirements:   { _method: "GET" }
 
 api:
     pattern:        /api
     defaults:       { _controller: knp_symfony2bundles.controller.main:apiAction }
     requirements:   { _method: "GET" }
 
-bundle_list:
-    pattern:        /{sort}
-    defaults:       { _controller: knp_symfony2bundles.controller.repo:listAction, class: Bundle, sort: best }
-    requirements:   { _method: "GET", sort: "(best|updated|newest)", format: "(html|json|js)" }
-
 project_list:
     pattern:        /project/{sort}
     defaults:       { _controller: knp_symfony2bundles.controller.repo:listAction, class: Project, sort: best }
-    requirements:   { _method: "GET", sort: "(best|name|createdAt|lastCommitAt)", format: "(html|json|js)" }
+    requirements:   { _method: "GET", sort: "(best|updated|newest)"}
 
 user_list:
     pattern:        /developer/{sort}
     defaults:       { _controller: knp_symfony2bundles.controller.user:listAction, sort: name }
-    requirements:   { _method: "GET", sort: "(name|best)", format: "(html|json|js)" }
+    requirements:   { _method: "GET", sort: "(name|best)"}
+
+bundle_list:
+    pattern:        /{sort}
+    defaults:       { _controller: knp_symfony2bundles.controller.repo:listAction, class: Bundle, sort: best }
+    requirements:   { _method: "GET", sort: "(best|updated|newest)"}
 
 user_bundle_list:
     pattern:        /{name}/bundles
@@ -38,12 +38,12 @@ user_projects_list:
     defaults:       { _controller: knp_symfony2bundles.controller.user:projectsAction }
     requirements:   { _method: "GET", format: "(json|js)" }
 
+user_show:
+    pattern:        /{name}/profile 
+    defaults:       { _controller: knp_symfony2bundles.controller.user:showAction }
+    requirements:   { _method: "GET"}
+
 repo_show:
     pattern:        /{username}/{name}
     defaults:       { _controller: knp_symfony2bundles.controller.repo:showAction }
     requirements:   { _method: "GET", format: "(html|json|js)", name: ".+" }
-
-user_show:
-    pattern:        /{name}
-    defaults:       { _controller: knp_symfony2bundles.controller.user:showAction }
-    requirements:   { _method: "GET", format: "(html|json|js)" }
