Use translated texts

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -9,7 +9,7 @@ framework:
         default_locale: en
         lifetime:       3600
         auto_start:     true
-    translator:    ~
+    translator:    { fallback: en }
 
 
 # Twig Configuration
