--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -55,3 +55,8 @@ doctrine:
             default:
                 mappings:
                   KnpSymfony2BundlesBundle: ~
+
+jms_i18n_routing:
+    default_locale: en
+    locales: [fr, en]
+    strategy: prefix_except_default
