Use a parameters.yml to handle parameters

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-app/config/config_*_local.yml
-app/cache/*
-app/logs/*
-app/repos
-app/data
-app/deploy.sh
-app/alive.php
-app/phpunit.xml
-web/bundles/*
-app/DoctrineMigrations/*
+/app/cache/*
+/app/logs/*
+/app/repos
+/app/data
+/app/deploy.sh
+/app/alive.php
+/app/phpunit.xml
+/web/bundles/*
+/app/DoctrineMigrations/*
 /vendor/
+/app/config/parameters.yml
+/app/config/parameters.*.yml
