--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/menus.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/menus.yml
@@ -3,7 +3,7 @@ services:
         class: Knp\Bundle\KnpBundlesBundle\Menu\MenuBuilder
         arguments: ["@knp_menu.factory"]
 
-    acme_main.menu.main:
+    knp_bundles.menu.main:
         class: Knp\Menu\MenuItem # the service definition requires setting the class
         factory_service: knp_bundles.menu_builder
         factory_method: createMainMenu
