Added button for manual adding repo

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,5 +1,6 @@
 imports:
     - { resource: parameters.yml }
+    - { resource: @KnpBundlesBundle/Resources/config/services.yml }
 
 framework:
     charset:          UTF-8
