Changes according to comments

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -1,7 +1,7 @@
 parameters:
-    updater.class:    Knp\Bundle\KnpBundlesBundle\Updater\Updater
+    knp_bundles.updater.class:    Knp\Bundle\KnpBundlesBundle\Updater\Updater
 
 services:
-    updater:
-        class:        %updater.class%
-        arguments:    [@knp_bundles.entity_manager, %knp_bundles.git_bin%, %knp_bundles.repos_dir%]
+    knp_bundles.updater:
+        class:                    %knp_bundles.updater.class%
+        arguments:                [@knp_bundles.entity_manager, %knp_bundles.git_bin%, %knp_bundles.repos_dir%]
