Add polish to the routing

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -62,5 +62,5 @@ doctrine:
 
 jms_i18n_routing:
     default_locale: en
-    locales: [fr, en]
+    locales: [fr, pl, en]
     strategy: prefix_except_default
