Use a special email for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,7 @@ script: phpunit --coverage-text -c app/
 branches:
     except:
         - experimental
+
+notifications:
+    email:
+        - travis@knplabs.com
