--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -7,3 +7,6 @@ parameters:
     database_user:     root
     database_password: ~
     database_path:     %kernel.root_dir%/db/db-%kernel.environment%.sql
+
+    knp_bundles.github.client_id: your_client_id_here
+    knp_bundles.github.client_secret: your_client_secret_here
