Twitterer as service

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -1,6 +1,8 @@
 parameters:
     knp_bundles.updater.class:    Knp\Bundle\KnpBundlesBundle\Updater\Updater
     knp_bundles.user.provider:    Knp\Bundle\KnpBundlesBundle\Security\Core\User\UserProvider
+    knp_bundles.trending_bundle_twitterer.class: Knp\Bundle\KnpBundlesBundle\Twitterer\TrendingBundleTwitterer
+    knp_bundles.trending_bundle_tweet.template: "Discover {name}, today's trending #Symfony2 bundle {url} #KnpBundles"
 
 services:
     knp_bundles.updater:
@@ -9,3 +11,6 @@ services:
     knp_bundles.user.provider:
         class:                    %knp_bundles.user.provider%
         arguments:                [@knp_bundles.entity_manager, @knp_bundles.updater]
+    knp_bundles.trending_bundle_twitterer:
+        class:                    %knp_bundles.trending_bundle_twitterer.class%
+        arguments:                [@knp_bundles.entity_manager,	%knp_bundles.trending_bundle_tweet.template%, @twitter_app]
