--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -1,20 +1,29 @@
 parameters:
-    knp_bundles.updater.class:    Knp\Bundle\KnpBundlesBundle\Updater\Updater
-    knp_bundles.user.provider:    Knp\Bundle\KnpBundlesBundle\Security\Core\User\UserProvider
+    knp_bundles.updater.class: Knp\Bundle\KnpBundlesBundle\Updater\Updater
+    knp_bundles.user.provider.class: Knp\Bundle\KnpBundlesBundle\Security\Core\User\UserProvider
     knp_bundles.trending_bundle_twitterer.class: Knp\Bundle\KnpBundlesBundle\Twitterer\TrendingBundleTwitterer
     knp_bundles.trending_bundle_tweet.template: "Discover {name}, today's trending #Symfony2 bundle {url} on #KnpBundles"
+    knp_bundles.consumer.update_bundle.class: Knp\Bundle\KnpBundlesBundle\Consumer\UpdateBundleConsumer
 
 services:
     knp_bundles.updater:
-        class:                    %knp_bundles.updater.class%
+        class: %knp_bundles.updater.class%
         arguments:
             - @knp_bundles.entity_manager
             - %knp_bundles.bundles_dir%
             - %knp_bundles.git_bin%
             - @old_sound_rabbit_mq.update_bundle_producer
+
     knp_bundles.user.provider:
-        class:                    %knp_bundles.user.provider%
-        arguments:                [@knp_bundles.entity_manager, @knp_bundles.updater]
+        class: %knp_bundles.user.provider.class%
+        arguments:
+            - @knp_bundles.entity_manager
+            - @knp_bundles.updater
+
     knp_bundles.trending_bundle_twitterer:
         class:                    %knp_bundles.trending_bundle_twitterer.class%
         arguments:                [@knp_bundles.entity_manager,	%knp_bundles.trending_bundle_tweet.template%, @twitter_app]
+
+    knp_bundles.consumer.update_bundle:
+        class: %knp_bundles.consumer.update_bundle.class%
+        arguments: []
