Generate login urls

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
@@ -24,10 +24,10 @@ add_bundle:
     defaults:       { _controller: KnpBundlesBundle:Bundle:add }
     requirements:   { _method: "GET|POST" }
 
-login:
+_login:
     pattern:        /login
 
-logout:
+_logout:
     pattern:        /logout
 
 symfony2bundles:
