--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -28,3 +28,8 @@ services:
         class: %knp_bundles.consumer.update_bundle.class%
         arguments: 
             - @doctrine.orm.entity_manager
+            - %knp_bundles.bundles_dir%
+            - %knp_bundles.git_bin%
+
+        calls:
+            - [ setLogger, [@logger]]
