--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
@@ -1,3 +1,8 @@
+scoring:
+    pattern:        /about/scoring
+    defaults:       { _controller: KnpBundlesBundle:Main:aboutScoring }
+    requirements:   { _method: "GET" }
+
 search:
     pattern:        /search
     defaults:       { _controller: KnpBundlesBundle:Bundle:search }
@@ -51,7 +56,7 @@ user_bundle_list:
     requirements:   { _method: "GET", format: "(json|js)" }
 
 user_show:
-    pattern:        /{name}/profile 
+    pattern:        /{name}/profile
     defaults:       { _controller: KnpBundlesBundle:User:show }
     requirements:   { _method: "GET"}
 
