--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -104,10 +104,10 @@ old_sound_rabbit_mq:
     producers:
         update_bundle:
             connection: default
-            exchange_options: {name: 'upload-bundle', type: direct}
+            exchange_options: {name: 'upload-bundle', type: direct, durable: true }
     consumers:
         update_bundle:
             connection: default
-            exchange_options: {name: 'upload-bundle', type: direct}
+            exchange_options: {name: 'upload-bundle', type: direct, durable: true }
             queue_options:    {name: 'upload-bundle'}
             callback:         knp_bundles.consumer.update_bundle
