Sync code changes to work with latest Symfony etc.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,8 +33,7 @@ knp_menu:
     twig: true
 
 # Paginator Configuration
-knp_paginator:
-    templating: ~
+knp_paginator: ~
 
 # KnpBundles Configuration
 knp_bundles: ~
