--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/twig.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/twig.yml
@@ -5,4 +5,7 @@ services:
             - { name: twig.extension }
         arguments:
             - @router
-
+    twig.extension.knp.flawored_markdown:
+        class: Knp\Bundle\KnpBundlesBundle\Twig\Extension\FlaworedMarkdownTwigExtension
+        tags:
+            - { name: twig.extension }
