--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,2 +1,6 @@
+_internal:
+    resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
+    prefix:   /_internal
+
 knpbundles:
     resource: "@KnpBundlesBundle/Resources/config/routing.yml"
