--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,6 +10,7 @@ framework:
     validation:       { enabled: true, enable_annotations: true }
     templating:       { engines: ['twig'] }
     default_locale: en
+    esi: { enabled: true }
     session:
         lifetime:       3600
         auto_start:     true
