generic tags, fetching from composer.json, supported in search.

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
@@ -50,6 +50,11 @@ bundle_list:
     defaults:       { _controller: KnpBundlesBundle:Bundle:list, sort: trend }
     requirements:   { _method: "GET", sort: "(best|updated|newest|trend)"}
 
+bundle_tag:
+    pattern:        /tag/{sluggedName}
+    defaults:       { _controller: KnpBundlesBundle:Bundle:searchByTag }
+    requirements:   { _method: "GET", format: "(html|json|js)", sluggedName: ".+" }
+
 user_bundle_list:
     pattern:        /{name}/bundles
     defaults:       { _controller: KnpBundlesBundle:User:bundles }
