--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
@@ -50,10 +50,10 @@ bundle_list:
     defaults:       { _controller: KnpBundlesBundle:Bundle:list, sort: trend }
     requirements:   { _method: "GET", sort: "(best|updated|newest|trend)"}
 
-bundle_tag:
-    pattern:        /tag/{sluggedName}
-    defaults:       { _controller: KnpBundlesBundle:Bundle:searchByTag }
-    requirements:   { _method: "GET", sluggedName: ".+" }
+bundle_keyword:
+    pattern:        /keyword/{slug}
+    defaults:       { _controller: KnpBundlesBundle:Bundle:searchByKeyword }
+    requirements:   { _method: "GET", slug: ".+" }
 
 user_bundle_list:
     pattern:        /{name}/bundles
