--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
@@ -65,6 +65,11 @@ bundle_change_usage_status:
     defaults:       { _controller: KnpBundlesBundle:Bundle:changeUsageStatus }
     requirements:   { _method: "GET", name: ".+" }
 
+bundle_get_badge:
+    pattern:        /{username}/{name}/badge
+    defaults:       { _controller: KnpBundlesBundle:Badge:getBadge }
+    requirements:   { _method: "GET", name: ".+" }
+
 bundle_show:
     pattern:        /{username}/{name}
     defaults:       { _controller: KnpBundlesBundle:Bundle:show }
