--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
@@ -74,3 +74,7 @@ bundle_show:
     pattern:        /{username}/{name}
     defaults:       { _controller: KnpBundlesBundle:Bundle:show }
     requirements:   { _method: "GET", format: "(html|json|js)", name: ".+" }
+
+imagine_test:
+    pattern:        /imagine
+    defaults:       { _controller: KnpBundlesBundle:Imagine:index }
