--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -17,4 +17,5 @@ services:
         arguments:                [@knp_bundles.entity_manager,	%knp_bundles.trending_bundle_tweet.template%, @twitter_app]
     knp_bundles.badge_generator:
         class:                    %knp_bundles.badge_generator.class%
-        arguments:                [@service_container]
+        calls:
+            - [ setContainer, [ @service_container ] ]
