Badge generation fixs by comments

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -77,4 +77,5 @@ services:
 
     knp_bundles.badge_generator:
         class:                    %knp_bundles.badge_generator.class%
-        arguments:                [@service_container]
+        calls:
+            - [ setContainer, [ @service_container ] ]
